--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,27 +1,29 @@
-name: Python application
+name: Python tests
 
 on:
   push:
-    branches:
-      - main
   pull_request:
     branches:
-      - main
+      - main  # Exécute aussi les tests pour chaque pull request vers main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  test:
+    runs-on: ubuntu-latest  # Utilise un environnement Linux
+    
     steps:
-    - uses: actions/checkout@v2
+    - name: Check out the repository
+      uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.12'
+        python-version: '3.12' 
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.txt  # Installe les dépendances
+
     - name: Run tests
       run: |
-        pytest
+        pytest  # Exécute pytest
